--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <img src="./static/videos/automobile_gen_res.gif" height="20%" />
                     </div>
                 </div>
-                <div style="text-align: center;">Generation results of different broad categories of interactions.</div>
+                <div style="text-align: center;">Generation results of different categories of interactions.</div>
             </div>
         </div>
     </section>
@@ -378,7 +378,7 @@
                     <img src="./static/videos/w_e_gen_res.gif" height="20%" />
                   </div>
               </div>
-              <div style="text-align: center;">Generation results of the same action with different emotions.</div>
+              <div style="text-align: center;">Generation results of "<i>walking towards</i>" with different emotions.</div>
           </div>
       </div>
   </section>
@@ -511,12 +511,6 @@
           <div class="content has-text-centered">
             <a class="icon-link"
                href="https://arxiv.org/pdf/2503.08270">
-              <i class="fas fa-file-pdf"></i>
-            </a>
-            <a class="icon-link" 
-              href="" 
-              class="external-link" disabled>
-               href="">
               <i class="fas fa-file-pdf"></i>
             </a>
             <a class="icon-link" href="" class="external-link" disabled>
