--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <img src="./static/videos/automobile_gen_res.gif" height="20%" />
                     </div>
                 </div>
-                <div style="text-align: center;">Generation results of different categories of interactions.</div>
+                <div style="text-align: center;">Reaction generation results of different categories of interactions.</div>
             </div>
         </div>
     </section>
@@ -378,7 +378,7 @@
                     <img src="./static/videos/w_e_gen_res.gif" height="20%" />
                   </div>
               </div>
-              <div style="text-align: center;">Generation results of "<i>walking towards</i>" with different emotions.</div>
+              <div style="text-align: center;">Reaction generation results of <i>walking towards</i> with different emotions.</div>
           </div>
       </div>
   </section>
