--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <div class="container is-max-desktop content">
           <h2 class="title">BibTeX</h2>
           <pre><code>
-            @inproceedings{yu2025hero,
+            @article{yu2025hero,
               title={HERO: Human Reaction Generation from Videos},
               author={Yu, Chengjun and Zhai, Wei and Yang, Yuhang and Cao, Yang and Zha, Zheng-Jun},
               journal={arXiv preprint arXiv:2503.08270},
