--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="columns is-centered">
               <div class="column has-text-centered">
                 <h1 class="title is-1 publication-title">HERO: Human Reaction Generation from Videos</h1>
-                <!-- <h2 class="title is-3" style="color: red;">CVPR2024</h2> -->
+                <h2 class="title is-3" style="color: red;">ICCV 2025</h2>
                 <div class="is-size-5 publication-authors">
                   <span class="author-block">
                     <a href="">Chengjun Yu</a><sup>1</sup>,</span>
@@ -164,7 +164,7 @@
                     </span> -->
                     <!-- Code Link. -->
                     <span class="link-block">
-                      <a href=""
+                      <a href="https://github.com/JackYu6/HERO_release"
                          class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                             <i class="fab fa-github"></i>
@@ -174,7 +174,7 @@
                     </span>
                     <!-- Dataset Link. -->
                     <span class="link-block">
-                      <a href=""
+                      <a href="https://drive.google.com/file/d/182yLuEVtESIrVXshrJeNS8dbx6sxGB13/view?usp=sharing"
                          class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                             <i class="far fa-images"></i>
@@ -513,7 +513,7 @@
                href="https://arxiv.org/pdf/2503.08270">
               <i class="fas fa-file-pdf"></i>
             </a>
-            <a class="icon-link" href="" class="external-link" disabled>
+            <a class="icon-link" href="https://github.com/JackYu6/HERO_release" class="external-link" disabled>
               <i class="fab fa-github"></i>
             </a>
           </div>
